--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="psp_blue">#0054E6</color>
 
     <color name="gray_txt">#5F5F5F</color>
+    <color name="gray_border">#B1B1B1</color>
+
+    <color name="transparent">#00FFFFFF</color>
 </resources>
